database layer implemented now

--- a/apps/core-api-spring/.env.example
+++ b/apps/core-api-spring/.env.example
@@ -7,3 +7,7 @@ APP_BASE_URL=http://localhost:3000
 
 # Alternatively copy config/api-local.example.properties to config/api-local.properties
 # and adjust values instead of exporting environment variables.
+APP_BOOTSTRAP_SINGLE_COMPANY=true
+APP_BOOTSTRAP_SINGLE_COMPANY_NAME=Local Company
+APP_BOOTSTRAP_SINGLE_COMPANY_SLUG=local
+
