--- a/apps/core-api-spring/src/main/resources/application.properties
+++ b/apps/core-api-spring/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.config.import=optional:file:./config/api-local.properties
+app.bootstrap.single-company.enabled=${APP_BOOTSTRAP_SINGLE_COMPANY:true}
+app.bootstrap.single-company.name=${APP_BOOTSTRAP_SINGLE_COMPANY_NAME:Local Company}
+app.bootstrap.single-company.slug=${APP_BOOTSTRAP_SINGLE_COMPANY_SLUG:local}
 server.port=${SERVER_PORT:8080}
 
 spring.application.name=core-api-spring
