--- a/apps/core-api-spring/config/api-local.example.properties
+++ b/apps/core-api-spring/config/api-local.example.properties
@@ -5,3 +5,8 @@ SPRING_DATASOURCE_PASSWORD=postgres
 SERVER_PORT=8080
 SESSION_COOKIE_SECURE=false
 APP_BASE_URL=http://localhost:3000
+
+# Single-company bootstrap (OSS)
+APP_BOOTSTRAP_SINGLE_COMPANY=true
+APP_BOOTSTRAP_SINGLE_COMPANY_NAME=Local Company
+APP_BOOTSTRAP_SINGLE_COMPANY_SLUG=local
