* email service implementation * unit tests * documentation

--- a/apps/core-api-spring/config/api-local.example.properties
+++ b/apps/core-api-spring/config/api-local.example.properties
@@ -10,3 +10,14 @@ APP_BASE_URL=http://localhost:3000
 APP_BOOTSTRAP_SINGLE_COMPANY=true
 APP_BOOTSTRAP_SINGLE_COMPANY_NAME=Local Company
 APP_BOOTSTRAP_SINGLE_COMPANY_SLUG=local
+
+# Email delivery
+APP_EMAIL_ENABLED=false
+APP_EMAIL_PROVIDER=smtp
+APP_EMAIL_DEFAULT_FROM=dev@localhost
+APP_EMAIL_SMTP_HOST=localhost
+APP_EMAIL_SMTP_PORT=1025
+APP_EMAIL_SMTP_USERNAME=
+APP_EMAIL_SMTP_PASSWORD=
+APP_EMAIL_SMTP_AUTH=false
+APP_EMAIL_SMTP_STARTTLS=false
