--- a/apps/core-api-spring/src/main/resources/application.properties
+++ b/apps/core-api-spring/src/main/resources/application.properties
@@ -6,6 +6,15 @@ server.port=${SERVER_PORT:8080}
 
 spring.application.name=core-api-spring
 app.base-url=${APP_BASE_URL:http://localhost:3000}
+app.email.enabled=${APP_EMAIL_ENABLED:false}
+app.email.provider=${APP_EMAIL_PROVIDER:smtp}
+app.email.default-from=${APP_EMAIL_DEFAULT_FROM:}
+app.email.smtp.host=${APP_EMAIL_SMTP_HOST:}
+app.email.smtp.port=${APP_EMAIL_SMTP_PORT:587}
+app.email.smtp.username=${APP_EMAIL_SMTP_USERNAME:}
+app.email.smtp.password=${APP_EMAIL_SMTP_PASSWORD:}
+app.email.smtp.auth=${APP_EMAIL_SMTP_AUTH:false}
+app.email.smtp.start-tls=${APP_EMAIL_SMTP_STARTTLS:true}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
