* adding the foundations of the UI

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-    "name":  "teuportal-core",
-    "private":  true,
-    "packageManager":  "pnpm@8.15.4",
-    "scripts":  {
-                    "dev:web":  "pnpm -C apps/core-web dev",
-                    "build:web":  "pnpm -C apps/core-web build"
-                }
+    "name": "teuportal-core",
+    "private": true,
+    "packageManager": "pnpm@8.15.4",
+    "scripts": {
+        "dev:web": "pnpm -C apps/core-web dev",
+        "build:web": "pnpm -C apps/core-web build"
+    },
+    "devDependencies": {
+        "@iconify-json/heroicons": "^1.2.3"
+    }
 }
