--- a/apps/core-web/package.json
+++ b/apps/core-web/package.json
@@ -10,12 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.14.1",
+    "@internationalized/date": "^3.9.0",
+    "@nuxt/ui": "^4.0.0",
     "@pinia/nuxt": "^0.5.3",
+    "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^11.0.0",
+    "date-fns": "^4.1.0",
     "nuxt": "^4.1.2",
     "pinia": "^2.2.4",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/lucide": "^1.2.68"
   }
 }
