* authentication parts * Added setup scaffolding and tenant bootstrap improvements on the API: admin email seeding for the default company, RLS-aware user creation, and a public /setup controller. * Hardened authentication flows: magic-link issuance/sign-in and OAuth2 now require existing company users, updated security config, tenancy helpers, and session handling with new repository/service classes. * Wired up frontend auth guard and UI: global middleware protecting /app, login button routing, user menu avatar/name rebuild, and layout fix to use <NuxtPage />. * Refreshed project configs and migrations (V3__auth.sql, property/env samples, pnpm-lock.yaml, pom.xml) to support the new features.

--- a/apps/core-api-spring/.env.example
+++ b/apps/core-api-spring/.env.example
@@ -1,17 +1,34 @@
+# Core database
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/teuportal
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
+SPRING_SESSION_STORE_TYPE=jdbc
 SERVER_PORT=8080
 SESSION_COOKIE_SECURE=false
 APP_BASE_URL=http://localhost:3000
 
-# Alternatively copy config/api-local.example.properties to config/api-local.properties
-# and adjust values instead of exporting environment variables.
+# OAuth2 credentials
+OAUTH_GOOGLE_CLIENT_ID=your-google-client-id
+OAUTH_GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Optional placeholders for other providers
+OAUTH_FACEBOOK_CLIENT_ID=
+OAUTH_FACEBOOK_CLIENT_SECRET=
+
+# SMTP server (magic link delivery)
+EMAIL_SERVER_HOST=localhost
+EMAIL_SERVER_PORT=1025
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_FROM=dev@localhost
+
+# Single-company bootstrap (OSS)
 APP_BOOTSTRAP_SINGLE_COMPANY=true
 APP_BOOTSTRAP_SINGLE_COMPANY_NAME=Local Company
 APP_BOOTSTRAP_SINGLE_COMPANY_SLUG=local
+APP_BOOTSTRAP_SINGLE_COMPANY_ADMIN_EMAIL=admin@localhost
 
-# Email delivery
+# Legacy application email flags (remove when unified)
 APP_EMAIL_ENABLED=false
 APP_EMAIL_PROVIDER=smtp
 APP_EMAIL_DEFAULT_FROM=dev@localhost
@@ -21,3 +38,5 @@ APP_EMAIL_SMTP_USERNAME=
 APP_EMAIL_SMTP_PASSWORD=
 APP_EMAIL_SMTP_AUTH=false
 APP_EMAIL_SMTP_STARTTLS=false
+
+# See config/api-local.example.properties for property-based overrides instead of env variables.
