--- a/apps/core-api-spring/src/main/resources/application.properties
+++ b/apps/core-api-spring/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.config.import=optional:file:./config/api-local.properties
 app.bootstrap.single-company.enabled=${APP_BOOTSTRAP_SINGLE_COMPANY:true}
 app.bootstrap.single-company.name=${APP_BOOTSTRAP_SINGLE_COMPANY_NAME:Local Company}
 app.bootstrap.single-company.slug=${APP_BOOTSTRAP_SINGLE_COMPANY_SLUG:local}
+app.bootstrap.single-company.admin-email=${APP_BOOTSTRAP_SINGLE_COMPANY_ADMIN_EMAIL:}
 server.port=${SERVER_PORT:8080}
 
 spring.application.name=core-api-spring
@@ -42,3 +43,8 @@ management.endpoint.health.show-details=when_authorized
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.security.oauth2.client.registration.google.client-id=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID:${OAUTH_GOOGLE_CLIENT_ID:}}
+spring.security.oauth2.client.registration.google.client-secret=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET:${OAUTH_GOOGLE_CLIENT_SECRET:}}
+spring.security.oauth2.client.registration.google.scope=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_SCOPE:openid,profile,email}
+spring.security.oauth2.client.registration.google.redirect-uri=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_REDIRECT_URI:{baseUrl}/auth/callback/{registrationId}}
+spring.security.oauth2.client.registration.google.client-name=${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_NAME:Google}
