--- a/apps/core-api-spring/config/api-local.example.properties
+++ b/apps/core-api-spring/config/api-local.example.properties
@@ -1,7 +1,8 @@
-# Copy to api-local.properties (same directory) to provide defaults without env vars.
+# Local developer defaults (overrides environment variables when present)
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/teuportal
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
+SPRING_SESSION_STORE_TYPE=jdbc
 SERVER_PORT=8080
 SESSION_COOKIE_SECURE=false
 APP_BASE_URL=http://localhost:3000
@@ -10,6 +11,8 @@ APP_BASE_URL=http://localhost:3000
 APP_BOOTSTRAP_SINGLE_COMPANY=true
 APP_BOOTSTRAP_SINGLE_COMPANY_NAME=Local Company
 APP_BOOTSTRAP_SINGLE_COMPANY_SLUG=local
+# Optional bootstrap owner email
+APP_BOOTSTRAP_SINGLE_COMPANY_ADMIN_EMAIL=admin@example.com
 
 # Email delivery
 APP_EMAIL_ENABLED=false
@@ -21,3 +24,21 @@ APP_EMAIL_SMTP_USERNAME=
 APP_EMAIL_SMTP_PASSWORD=
 APP_EMAIL_SMTP_AUTH=false
 APP_EMAIL_SMTP_STARTTLS=false
+
+# SMTP server credentials (magic link delivery)
+EMAIL_SERVER_HOST=localhost
+EMAIL_SERVER_PORT=1025
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_FROM=dev@localhost
+
+# OAuth2 clients
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID=your-google-client-id
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET=your-google-client-secret
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_SCOPE=openid,profile,email
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_REDIRECT_URI={baseUrl}/auth/callback/google
+
+# Placeholders for future social providers
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_FACEBOOK_CLIENT_ID=
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_FACEBOOK_CLIENT_SECRET=
+
